fix: FlexibleApproach on mobile: circle is not centered

--- a/src/modules/FlexibleApproach/style.scss
+++ b/src/modules/FlexibleApproach/style.scss
@@ -107,17 +107,19 @@
 
 		&__photoWrapper {
 			width: calc(100% - vw(32px, $mvw));
+			margin-right: vw(16px, $mvw);
 			margin-left: vw(16px, $mvw);
 			padding-top: calc(100% - vw(32px, $mvw));
+
 			position: relative;
 
 			& > div {
 				width: calc(100% - vw(92px, $mvw));
 
 				position: absolute;
-				left: calc(13% + 1px);
-				right: calc(13% + 1px);
-				bottom: calc(14% + 1px);
+				left: calc(13%);
+				right: calc(13%);
+				bottom: calc(14%);
 			}
 		}
 
@@ -127,8 +129,8 @@
 		}
 
 		&__content {
-			margin-top: calc(-100% + 25px);
-			padding: calc(100% - 25px + vw(32px, $mvw)) vw(16px, $mvw) vw(64px, $mvw);
+			margin-top: calc(-100% + vw(16px, $mvw));
+			padding: calc(100% - vw(16px, $mvw) + vw(30px, $mvw)) vw(16px, $mvw) vw(64px, $mvw);
 			border-radius: vw(400px, $mvw) vw(400px, $mvw) 0 0;
 			background-color: $celestial;
 		}
